--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -9,9 +9,12 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
+      - run: |
+          sudo apt-get update
+          sudo apt-get install build-essential
       -
         name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2.1.3
         with:
           fetch-depth: 0
       -
