--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -17,6 +17,11 @@ jobs:
         run: |
           sudo apt-get install gcc-multilib g++-multilib
       -
+        name: OSXCross for CGO Support
+        run: |
+          mkdir ../../osxcross
+          git clone https://github.com/plentico/osxcross-target.git ../../osxcross/target
+      -
         name: Checkout
         uses: actions/checkout@v2
         with:
