--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -37,40 +37,40 @@ builds:
       # - "{{ .Env.BUILD_FLAGS }}"
     # ldflags:
     #   - "{{ .Env.LD_FLAGS }}"
-  - id: regen-linux-arm64
-    binary: regen
-    main: ./app/regen
-    goarch:
-      - arm64
-    goos:
-      - linux
-    env:
-      - CC=aarch64-linux-gnu-gcc
-      - CXX=aarch64-linux-gnu-g++
-    flags:
-      # - "{{ .Env.BUILD_FLAGS }}"
-      - -trimpath
-      - -mod=readonly
-    # ldflags:
-    #   - "{{ .Env.LD_FLAGS }}"
-    #   - -extldflags "-lc -lrt -lpthread --static"
-  - id: regen-windows-amd64
-    binary: regen
-    main: ./app/regen
-    goarch:
-      - amd64
-    goos:
-      - windows
-    env:
-      - CC=x86_64-w64-mingw32-gcc
-      - CXX=x86_64-w64-mingw32-g++
-    flags:
-      # - "{{ .Env.BUILD_FLAGS }}"
-      - -trimpath
-      - -mod=readonly
-      - -buildmode=exe
-    # ldflags:
-    #   - "{{ .Env.LD_FLAGS }}"
+  # - id: regen-linux-arm64
+  #   binary: regen
+  #   main: ./app/regen
+  #   goarch:
+  #     - arm64
+  #   goos:
+  #     - linux
+  #   env:
+  #     - CC=aarch64-linux-gnu-gcc
+  #     - CXX=aarch64-linux-gnu-g++
+  #   flags:
+  #     # - "{{ .Env.BUILD_FLAGS }}"
+  #     - -trimpath
+  #     - -mod=readonly
+  #   # ldflags:
+  #   #   - "{{ .Env.LD_FLAGS }}"
+  #   #   - -extldflags "-lc -lrt -lpthread --static"
+  # - id: regen-windows-amd64
+  #   binary: regen
+  #   main: ./app/regen
+  #   goarch:
+  #     - amd64
+  #   goos:
+  #     - windows
+  #   env:
+  #     - CC=x86_64-w64-mingw32-gcc
+  #     - CXX=x86_64-w64-mingw32-g++
+  #   flags:
+  #     # - "{{ .Env.BUILD_FLAGS }}"
+  #     - -trimpath
+  #     - -mod=readonly
+  #     - -buildmode=exe
+  #   # ldflags:
+  #   #   - "{{ .Env.LD_FLAGS }}"
 archives:
   - id: regen
     builds:
