--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -62,8 +62,10 @@ builds:
     goos:
       - windows
     env:
-      - CC=x86_64-w64-mingw32-gcc
-      - CXX=x86_64-w64-mingw32-g++
+      - CC=/home/runner/work/osxcross/target/bin/x86_64-w64-mingw32-gcc
+      - CXX=/home/runner/work/osxcross/target/bin/x86_64-w64-mingw32-g++
+      # - CC=x86_64-w64-mingw32-gcc
+      # - CXX=x86_64-w64-mingw32-g++
     flags:
       # - "{{ .Env.BUILD_FLAGS }}"
       - -trimpath
