--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -13,7 +13,7 @@ jobs:
         name: GCC multilib
         run: |
           sudo apt-get install gcc-multilib g++-multilib clang 
-          sudo apt-get install libssl1.0.0
+          sudo apt-get install libssl1.1 libssl-dev --reinstall
 
       -
         name: OSXCross for CGO Support
