--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -36,8 +36,7 @@ archives:
   - id: regen
     builds:
       - regen-linux-amd64
-      - regen-linux-amd64-experimental
-      # - regen-darwin-amd64
+      - regen-darwin-amd64
     name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
     wrap_in_directory: true
     format: zip
