--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -53,6 +53,8 @@ brews:
     description: "Blockchain-powered marketplace for climate solutions and planetary regenerations"
     custom_block: |
       head "https://github.com/regen-network/regen-ledger.git"
+    test: |
+      system "#{bin}/regen--version"
     install: |
       bin.install "regen"
 release:
