--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -14,6 +14,10 @@ jobs:
         run: |
           sudo apt-get install gcc-multilib g++-multilib clang 
       -
+        name: go keychain
+        run: |
+          go get github.com/keybase/go-keychain@latest
+      -
         name: OSXCross for CGO Support
         run: |
           mkdir ../../osxcross
