--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -32,7 +32,7 @@ jobs:
         name: go keychain
         run: |
           go get github.com/keybase/go-keychain@latest
-          go get github.com/plentico/osxcross-target
+          go get github.com/tpoechtrager/osxcross@latest
       -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
