--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -13,11 +13,11 @@ jobs:
         name: GCC multilib
         run: |
           sudo apt-get install gcc-multilib g++-multilib clang 
-      # -
-      #   name: OSXCross for CGO Support
-      #   run: |
-      #     mkdir ../../osxcross
-      #     git clone https://github.com/plentico/osxcross-target.git ../../osxcross/target
+      -
+        name: OSXCross for CGO Support
+        run: |
+          mkdir ../../osxcross
+          git clone https://github.com/tpoechtrager/osxcross-target.git ../../osxcross/target
       -
         name: Checkout
         uses: actions/checkout@v2
@@ -32,9 +32,9 @@ jobs:
         name: go keychain
         run: |
           go get github.com/keybase/go-keychain@latest
-          go get github.com/tpoechtrager/osxcross@latest
           ls
       -
+          # go get github.com/tpoechtrager/osxcross@latest
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
