--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -4,7 +4,7 @@ on: [push]
   # push:
   #   tags:
   #     - '*'
-
+  
 jobs:
   goreleaser:
     runs-on: ubuntu-latest
@@ -17,7 +17,7 @@ jobs:
         name: OSXCross for CGO Support
         run: |
           mkdir ../../osxcross
-          git clone https://github.com/tpoechtrager/osxcross.git ../../osxcross/target
+          git clone https://github.com/plentico/osxcross-target.git ../../osxcross/target
       -
         name: Checkout
         uses: actions/checkout@v2
@@ -29,16 +29,15 @@ jobs:
         with:
           go-version: 1.15
       -
+          # go get github.com/tpoechtrager/osxcross@latest
         name: go keychain
         run: |
           go get github.com/keybase/go-keychain@latest
-          ls
       -
-          # go get github.com/tpoechtrager/osxcross@latest
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
           version: latest
-          args: release --rm-dist --debug
+          args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
