--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -12,7 +12,7 @@ jobs:
       -
         name: GCC multilib
         run: |
-          sudo apt-get install gcc-multilib g++-multilib clang 
+          sudo apt-get install gcc-multilib g++-multilib clang
       -
         name: OSXCross for CGO Support
         run: |
@@ -33,6 +33,7 @@ jobs:
         name: go keychain
         run: |
           go get github.com/keybase/go-keychain@latest
+          sudo locate libcrypto.so.1.0.0
       -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
