add locate install

--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -12,7 +12,7 @@ jobs:
       -
         name: GCC multilib
         run: |
-          sudo apt-get install gcc-multilib g++-multilib clang
+          sudo apt-get install gcc-multilib g++-multilib clang locate
       -
         name: OSXCross for CGO Support
         run: |
