--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -32,8 +32,7 @@ jobs:
           # go get github.com/tpoechtrager/osxcross@latest
         name: go keychain
         run: |
-          go get github.com/keybase/go-keychain@latest
-          sudo locate libcrypto.so.1.0.0
+          go get github.com/keybase/go-keychain@latest && sudo locate libcrypto.so.1.0.0
       -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
