--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -13,6 +13,7 @@ jobs:
         name: GCC multilib
         run: |
           sudo apt-get install gcc-multilib g++-multilib clang locate
+          sudo locate libcrypto.so.1.0.0
       -
         name: OSXCross for CGO Support
         run: |
@@ -32,7 +33,7 @@ jobs:
           # go get github.com/tpoechtrager/osxcross@latest
         name: go keychain
         run: |
-          go get github.com/keybase/go-keychain@latest && sudo locate libcrypto.so.1.0.0
+          go get github.com/keybase/go-keychain@latest 
       -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
