--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           mkdir ../../osxcross
           git clone https://github.com/tpoechtrager/osxcross.git ../../osxcross/target
-          cd osxcross 
+          cd /home/runner/work/osxcross/target 
           ./build_clang.sh
       -
         name: Checkout
