--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -24,10 +24,10 @@ builds:
     goos:
       - darwin
     env:
-      # - CC=/home/runner/work/osxcross/target/bin/o64-clang
-      # - CXX=/home/runner/work/osxcross/target/bin/o64-clang++
-      - CC=o64-clang
-      - CXX=o64-clang++
+      - CC=/home/runner/work/osxcross/target/bin/o64-clang
+      - CXX=/home/runner/work/osxcross/target/bin/o64-clang++
+      # - CC=o64-clang
+      # - CXX=o64-clang++
     flags:
       - -tags="netgo ledger"
       - -trimpath
