--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -19,7 +19,7 @@ jobs:
           mkdir ../../osxcross
           git clone https://github.com/tpoechtrager/osxcross.git ../../osxcross/target
           ls /home/runner/work/osxcross/target
-          ./build_clang.sh
+          build_clang.sh
       -
         name: Checkout
         uses: actions/checkout@v2
