--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -18,8 +18,8 @@ jobs:
         run: |
           mkdir ../../osxcross
           git clone https://github.com/tpoechtrager/osxcross.git ../../osxcross/target
-          ls /home/runner/work/osxcross/target
-          build_clang.sh
+          ls -l /home/runner/work/osxcross/target
+          # build_clang.sh
       -
         name: Checkout
         uses: actions/checkout@v2
