--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -17,9 +17,11 @@ jobs:
         name: OSXCross for CGO Support
         run: |
           mkdir ../../osxcross
-          git clone https://github.com/plentico/osxcross-target.git ../../osxcross/target
+          # git clone https://github.com/plentico/osxcross-target.git ../../osxcross/target
           
-          # git clone https://github.com/tpoechtrager/osxcross.git ../../osxcross/target
+          git clone https://github.com/tpoechtrager/osxcross.git ../../osxcross/target
+          cd /home/runner/work/osxcross/target/
+          ls -l
           # ls -l /home/runner/work/osxcross/target
           # echo "-----------------------------------"
           # ls -l /home/runner/work/osxcross/target/oclang
