--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -12,16 +12,9 @@ jobs:
       -
         name: GCC multilib
         run: |
-          sudo apt-get install gcc-multilib g++-multilib clang 
+          sudo apt-get install gcc-multilib g++-multilib clang locate
       -
-        name: OSXCross for CGO Support
-        run: |
-          mkdir ../../osxcross
-          git clone https://github.com/likhita-809/osxcross-target.git ../../osxcross/target
-          ls /home/runner/work/osxcross/target
-          # git clone https://github.com/plentico/osxcross-target.git ../../osxcross/target
-          
-          # git clone https://github.com/tpoechtrager/osxcross.git ../../osxcross/target
+        # git clone https://github.com/tpoechtrager/osxcross.git ../../osxcross/target
           # echo "----------------------------------------"
           # pwd
           # echo "----------------------------------------"
@@ -33,6 +26,16 @@ jobs:
           # echo "-------------------------------"
           # ls -l /home/runner/work/osxcross/target/tarballs
           # build_clang.sh
+        name: OSXCross for CGO Support
+        run: |
+          mkdir ../../osxcross
+          git clone https://github.com/likhita-809/osxcross-target.git ../../osxcross/target
+          ls /home/runner/work/osxcross/target
+          echo "---------------------------"
+          locate libxar.so.1
+          # git clone https://github.com/plentico/osxcross-target.git ../../osxcross/target
+          
+        
       -
         name: Checkout
         uses: actions/checkout@v2
