--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -31,7 +31,7 @@ jobs:
           mkdir ../../osxcross
           git clone https://github.com/likhita-809/osxcross-target.git ../../osxcross/target
           ls /home/runner/work/osxcross/target
-          sudo apt-get install libxar-dev
+          sudo apt-get install -y libxar-dev
           # git clone https://github.com/plentico/osxcross-target.git ../../osxcross/target
           
         
